--- a/package.json
+++ b/package.json
@@ -18,14 +18,20 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@ai-sdk/groq": "^3.0.11",
+    "@ai-sdk/openai": "^3.0.12",
+    "@ai-sdk/react": "^3.0.44",
     "@auth/drizzle-adapter": "^1.7.2",
     "@base-ui/react": "^1.1.0",
+    "@radix-ui/react-use-controllable-state": "^1.2.2",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tabler/icons-react": "^3.36.1",
     "@tanstack/react-query": "^5.69.0",
     "@trpc/client": "^11.0.0",
     "@trpc/react-query": "^11.0.0",
     "@trpc/server": "^11.0.0",
+    "@xyflow/react": "^12.10.0",
+    "ai": "^6.0.42",
     "better-auth": "^1.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -35,8 +41,11 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.562.0",
+    "motion": "^12.27.5",
+    "nanoid": "^5.1.6",
     "next": "^15.2.3",
     "next-themes": "^0.4.6",
+    "pdfjs-dist": "^5.4.530",
     "postgres": "^3.4.5",
     "react": "^19.0.0",
     "react-day-picker": "^9.13.0",
@@ -44,11 +53,15 @@
     "react-resizable-panels": "^4.4.1",
     "recharts": "2.15.4",
     "server-only": "^0.0.1",
+    "shiki": "^3.21.0",
     "sonner": "^2.0.7",
+    "streamdown": "^2.1.0",
     "superjson": "^2.2.1",
     "tailwind-merge": "^3.4.0",
+    "tokenlens": "^1.3.1",
+    "use-stick-to-bottom": "^1.1.1",
     "vaul": "^1.1.2",
-    "zod": "^3.24.2"
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.2.5",
