--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.41.0",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.27.5",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.562.0",
     "motion": "^12.27.5",
@@ -51,6 +52,7 @@
     "react-day-picker": "^9.13.0",
     "react-dom": "^19.0.0",
     "react-resizable-panels": "^4.4.1",
+    "react-use-measure": "^2.1.7",
     "recharts": "2.15.4",
     "server-only": "^0.0.1",
     "shiki": "^3.21.0",
