--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@trpc/client": "^11.0.0",
     "@trpc/react-query": "^11.0.0",
     "@trpc/server": "^11.0.0",
+    "@vercel/blob": "^2.0.0",
     "@xyflow/react": "^12.10.0",
     "ai": "^6.0.42",
     "better-auth": "^1.3",
