--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@auth/drizzle-adapter": "^1.7.2",
     "@base-ui/react": "^1.1.0",
     "@radix-ui/react-use-controllable-state": "^1.2.2",
+    "@react-email/components": "^1.0.6",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tabler/icons-react": "^3.36.1",
     "@tanstack/react-query": "^5.69.0",
@@ -40,6 +41,7 @@
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.41.0",
     "embla-carousel-react": "^8.6.0",
+    "exa-js": "^2.0.12",
     "framer-motion": "^12.27.5",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.562.0",
@@ -52,9 +54,11 @@
     "react": "^19.0.0",
     "react-day-picker": "^9.13.0",
     "react-dom": "^19.0.0",
+    "react-email": "^5.2.5",
     "react-resizable-panels": "^4.4.1",
     "react-use-measure": "^2.1.7",
     "recharts": "2.15.4",
+    "resend": "^6.8.0",
     "server-only": "^0.0.1",
     "shiki": "^3.21.0",
     "sonner": "^2.0.7",
@@ -64,6 +68,7 @@
     "tokenlens": "^1.3.1",
     "use-stick-to-bottom": "^1.1.1",
     "vaul": "^1.1.2",
+    "workflow": "^4.0.1-beta.49",
     "zod": "^4.3.5"
   },
   "devDependencies": {
