--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "dev": "next dev --turbo",
     "preview": "next build && next start",
     "start": "next start",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "test:conversations": "bun run scripts/test-conversations.ts"
   },
   "dependencies": {
     "@ai-sdk/groq": "^3.0.11",
